# pytides

./: .gitignore  CHANGES  README.md  doc.ps1  pyproject.toml  setup.py
.github/workflows/: python-package.yml
pytides2/: __init__.py  astro.py  constituent.py  nodal_corrections.py  tide.py
test/: test_pytides2.py
test/data/: water_level.csv
