[tool.poetry]
name = "pytides2"
version = "0.0.5"
description = "fork of pytides by sam cox, compatible with newer version of python"
authors = ["Sam Cox <sam.cox@cantab.net>"]
maintainers= ["Sahit Sadono <sahit.tuntas.s@mail.ugm.ac.id>"]
homepage = "https://github.com/sahitono/pytides"
repository = "https://github.com/sahitono/pytides"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.18"
scipy = ">=1.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
isort = "^5.6.4"
mypy = "^0.790"
pdoc3 = "^0.9.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
